Fixed mobile layout aligning

--- a/lstyle.css
+++ b/lstyle.css
@@ -177,5 +177,9 @@ button:active {
     background-color: #f4f1de;
     overflow-y: visible;
     overflow-x: hidden;
+
+  }
+p {
+    text-align: center;
   } 
 }
